--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -16,6 +16,25 @@
             android:layout_margin="5dp"
             android:orientation="vertical"
             android:background="@drawable/ic_border">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/txt_serial_value"
+                android:text="NHIỆT ĐỘ"
+                android:textSize="30dp"
+                android:textColor="#fff"
+
+                android:background="#ff00"
+                android:textAlignment="center"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+
+                android:text=" nhấn"
+                android:id="@+id/button_id"
+                />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
